// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/SVG Icons Color_Icon smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <div class="_icon_wrapper_1j07s_1 _pointer_effect_1j07s_17"
       style="width: 50px; height: 50px;"
  >
    <svg version="1.1"
         height="50"
         width="50"
         viewbox="0 0 24 24"
    >
      <g transform="translate(0 -1028.4)">
        <path d="m2 1033.4c-1.1046 0-2 0.9-2 2v14c0 1.1 0.89543 2 2 2h20c1.105 0 2-0.9 2-2v-14c0-1.1-0.895-2-2-2h-20z"
              fill="#2980b9"
        >
        </path>
        <path d="m3 1029.4c-1.1046 0-2 0.9-2 2v14c0 1.1 0.8954 2 2 2h11 5 2c1.105 0 2-0.9 2-2v-9-3c0-1.1-0.895-2-2-2h-2-5-1l-3-2h-7z"
              fill="#2980b9"
        >
        </path>
        <path d="m23 1042.4v-8c0-1.1-0.895-2-2-2h-11-5-2c-1.1046 0-2 0.9-2 2v8h22z"
              fill="#bdc3c7"
        >
        </path>
        <path d="m2 1033.4c-1.1046 0-2 0.9-2 2v6 1 6c0 1.1 0.89543 2 2 2h20c1.105 0 2-0.9 2-2v-6-1-6c0-1.1-0.895-2-2-2h-20z"
              fill="#3498db"
        >
        </path>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Components/SVG Icons Fill_Icon smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <div class="_icon_wrapper_1j07s_1 _pointer_effect_1j07s_17"
       style="width: 50px; height: 50px;"
  >
    <svg xmlns="http://www.w3.org/2000/svg"
         width="50"
         height="50"
         viewbox="0 0 24 24"
         fill="none"
         stroke="#000000"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="fill-primary-900 dark:fill-primary-50"
    >
      <circle cx="12"
              cy="12"
              r="10"
      >
      </circle>
      <line x1="12"
            y1="8"
            x2="12"
            y2="12"
      >
      </line>
      <line x1="12"
            y1="16"
            x2="12.01"
            y2="16"
      >
      </line>
    </svg>
  </div>
</div>
`;

exports[`Components/SVG Icons Line_Icon smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <div class="_icon_wrapper_1j07s_1 _pointer_effect_1j07s_17"
       style="width: 50px; height: 50px;"
  >
    <svg xmlns="http://www.w3.org/2000/svg"
         width="50"
         height="50"
         viewbox="0 0 24 24"
         fill="none"
         stroke="#000000"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="stroke-primary-900 dark:stroke-primary-50"
    >
      <circle cx="12"
              cy="12"
              r="10"
      >
      </circle>
      <line x1="12"
            y1="8"
            x2="12"
            y2="12"
      >
      </line>
      <line x1="12"
            y1="16"
            x2="12.01"
            y2="16"
      >
      </line>
    </svg>
  </div>
</div>
`;
